# ssh-agent-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  README.zh.md  application.cpp  application.h  cmdline_option.cpp  cmdline_option.h  hyperv_register.ps1  ini_parse.cpp  ini_parse.h  log.cpp  log.h  lxperm.cpp  lxperm.h  main.cpp  message_dispatcher.cpp  message_dispatcher.h  protocol_client_base.h  protocol_client_libassuan_socket_emu.cpp  protocol_client_libassuan_socket_emu.h  protocol_client_pageant.cpp  protocol_client_pageant.h  protocol_client_win32_namedpipe.cpp  protocol_client_win32_namedpipe.h  protocol_connection_manager.h  protocol_connector_libassuan_socket_emu.cpp  protocol_connector_win32_namedpipe.cpp  protocol_connector_win32_namedpipe.h  protocol_forward_gpg4win_connection_manager.cpp  protocol_forward_gpg4win_connection_manager.h  protocol_iocp_connection_manager.cpp  protocol_iocp_connection_manager.h  protocol_listener_base.cpp  protocol_listener_base.h  protocol_listener_iocp_connection_manager.cpp  protocol_listener_iocp_connection_manager.h  (+12 more)
.github/workflows/: build.yml  cmake.yml
oww/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
oww/src/: cmake_install.cmake
protocol/: client_base.h  connection_manager.cpp  connection_manager.h
protocol/connection_manager/: forwarding.cpp  forwarding.h  proxy.cpp  proxy.h
protocol/libassuan_socket_emulation/: client.h  connector.h  listener.cpp
protocol/namedpipe/: client.cpp  client.h  connector.cpp  listener.h
protocol/pageant/: client.cpp  client.h  listener.h
protocol/unix/: listener.cpp
src/: CMakeLists.txt  application.cpp  application.h  cmdline_option.h  ini_parse.cpp  log.cpp  log.h  lxperm.cpp  main.cpp  message_dispatcher.cpp  message_dispatcher.h  service_support.cpp  service_support.h  util.cpp  util.h
src/protocol/: client_base.h  protocol_ssh_agent.cpp  protocol_ssh_agent.h  protocol_ssh_helper.cpp  protocol_ssh_helper.h
src/protocol/cygwin/: listener.cpp  listener.h
src/protocol/hyperv/: listener.cpp  listener.h  rebind_notifier.cpp  rebind_notifier.h
src/protocol/libassuan_socket_emulation/: client.cpp  connector.cpp  listener.cpp  listener.h
src/protocol/namedpipe/: client.cpp  listener.cpp
src/protocol/pageant/: client.cpp  client.h  listener.cpp
src/protocol/unix/: listener.h
wsl2_helper/: CMakeLists.txt  Makefile  main.cpp
